chore: fixing javadoc to remove extra *, minor sonar fix.